--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -54,6 +54,9 @@
               <button type="button" class="cancel-btn" onclick="goBack()">
                 キャンセル
               </button>
+              <button type="top" class="top-btn" href="/dashboard">
+                TOPへ戻る
+              </button>
             </div>
           </form>
         </div>
