--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -33,9 +33,9 @@
               <label for="item-status">状態</label>
               <select id="item-status" name="status" required>
                 <option value="">状態を選択</option>
-                <option value="interested">気になる★</option>
-                <option value="purchased">購入済み✔️</option>
-                <option value="working">作業中▶︎</option>
+                <option value="interested">ToMore</option>
+                <option value="purchased">ToDo</option>
+                <option value="working">Now!!</option>
               </select>
             </div>
 
